--- a/pom.xml
+++ b/pom.xml
@@ -81,6 +81,20 @@
       <artifactId>jersey-media-json-jackson</artifactId>
       <version>2.30.1</version>
     </dependency>
+
+    <dependency>
+      <groupId>com.auth0</groupId>
+      <artifactId>java-jwt</artifactId>
+      <version>3.16.0</version>
+    </dependency>
+
+    <dependency>
+      <groupId>io.jsonwebtoken</groupId>
+      <artifactId>jjwt</artifactId>
+      <version>0.9.1</version>
+    </dependency>
+
+
   </dependencies>
 
   <build>
